# Vision-system-for-autonomours-cars

./: README.md  pyproject.toml
src/Vision_system_for_autonomous_cars.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/core/datahub/collectors/: __init__.py  collector.py  creator.py  images_collector.py
src/core/datahub/datatypes/: __init__.py  creator.py  datatype.py  images.py
src/core/datahub/sensors/: sensor.py
src/core/pipeline/: pipeline.py
src/logger/: logger.py  logger_cfg.json
src/pub_sub/: __init__.py  publisher.py  subscriber.py  topics.py
src/pub_sub/pub_sub_hub/: __init__.py  hub.py  message_queues.py  storage.py
src/utils/: base_config.py  creator.py  list_tools.py  singleton.py  string_tools.py  system_info.py
src/visualizer/: visualizer.py
storage/: .$design.drawio.bkp  design.drawio
tests/scripts/: test.py
tests/test_core/test_datahub/: test_datatypes.py
