[project]
    name = "Vision_system_for_autonomous_cars"
    version = "0.0.1"
    authors = [
    { name="Hieu", email="hieu.bnt235@gmail.com" },
    ]


[build-system]
    requires = ["setuptools >= 61.0"]
    build-backend = "setuptools.build_meta"


[tool.setuptools]
    package-dir = {"" = "src"}
#    include-package-data = true

#[tool.setuptools.packages.find]
#    where = ["src"]
#    include = ["*"]

